--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && node index.js"
+    "build": "npm install",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
